--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   width: 600px;
   height: 93vh;
   background-color: #fff;
+  position: relative;
 }
 
 header {
@@ -184,7 +185,8 @@ header h2 {
   margin-right: 5px;
 }
 
-.submit-btn {
+.submit-btn,
+.submit {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -195,4 +197,65 @@ header h2 {
   color: #fff;
   border: none;
   margin-bottom: 10px;
+}
+
+.modal {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 524px;
+  height: 542.24px;
+  position: absolute;
+  z-index: 1;
+  top: 25%;
+  left: 40px;
+  background-color: #fff;
+  border-radius: 3.89px;
+  box-shadow: 5.19px 5.19px 255.44px 0px #00000080;
+  display: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.form label {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 40px auto;
+}
+
+.form input {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 31.12px;
+  margin: 0 auto;
+  width: 475.91px;
+  height: 71.3px;
+  margin-bottom: 20px;
+  border: 1.3px solid #757575;
+  border-radius: 3.89px;
+}
+
+.inputs {
+  margin-left: 20px;
+  margin-bottom: 30px;
+}
+
+.form input::placeholder {
+  position: absolute;
+  left: 35px;
+}
+
+.submit {
+  margin: 0 auto;
+  width: 475.91px;
+  height: 71.3px;
+  top: 733.09px;
+  left: 61.22px;
+  gap: 0px;
+  border-radius: 3.89px;
+  opacity: 0px;
 }
